syntax = "proto3";

package com.salty.protos;

import "google/protobuf/any.proto";

service Waiter {
    rpc SayHello (GrpcReq) returns (GrpcResp) {
    }
}

// defined Req message struct
message HelloReq {
    string name = 1;
}

//defined Res message struct
message HelloResp {
    string message = 1;
}

// Basic Request
message GrpcReq {
    google.protobuf.Any data = 1;
}

// Basic Response
message GrpcResp {
    int32 code = 1;
    string message = 2;
    google.protobuf.Any data = 3;
}
